mensi redesign pro vytvareni sablon

--- a/app/components/Auction/Create/createAuctionView.html
+++ b/app/components/Auction/Create/createAuctionView.html
@@ -24,7 +24,7 @@
           });
       });
     </script>
-    <div class="form-group half">
+    <div class="form-group half half-center">
       <div class="select_auction_template">
         <span>{{'texts.auction.select_template_label' | i18next}}</span>
       </div>
