--- a/css/content.css
+++ b/css/content.css
@@ -734,6 +734,7 @@ hr.small {
     padding-top: 15px;
     padding-left: 15px;
     padding-right: 15px;
+    color: #2c2d51;
 }
 .ngdialog.ngdialog-theme-default.assignment_driver_dialog  {
     padding-bottom: 80px;
