--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -56,7 +56,7 @@
         <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div ng-if="!AuctionList.length" class="no-auction">{{'texts.auction.no_auction' | i18next}}</div>
             <div class="auction-item" ng-repeat="item in AuctionList">
-                <detail-auction auction-item="{item}" with-favourite="true"></detail-auction>
+                <detail-auction auction-item="{item}" with-favourite="withFavourite"></detail-auction>
             </div>
             <paging item-count="AuctionList.length" all-items-count="AuctionListCount"></paging>
         </div>
