--- a/css/content.css
+++ b/css/content.css
@@ -51,8 +51,7 @@
 
 /*auction*/
 .sorting-bar {
-    width: 100%;
-    padding-bottom: 10px;
+    padding: 10px 0;
     text-align: right;
 }
 .sorting-bar .sorting-label {
@@ -171,7 +170,7 @@
 }
 .select_auction_template {
     font-weight: bold;
-    padding-bottom: 7px;
+    padding: 7px 7px 7px 0;
 }
 .auction_template_divider {
     height: 1px;
