--- a/css/global.css
+++ b/css/global.css
@@ -47,6 +47,17 @@ h3.no-border {
     border-bottom: 0;
 }
 
+.heading-right {
+    float: right;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 16px;
+}
+
+.heading-right .select_template {
+    display: inline-block;
+}
+
 p {
     padding-bottom: 27px;
 }
